TabloidParser.java
// Generated from Tabloid.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TabloidParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, ID=38, INT=39, 
		FLOAT=40, STRING=41, BOOL=42, COMMENT=43, WS=44;
	public static final int
		RULE_programma = 0, RULE_dilosi = 1, RULE_anathesi = 2, RULE_ektypwsi = 3, 
		RULE_eisodos = 4, RULE_epistrofi = 5, RULE_dhmiourgiasynartishs = 6, RULE_parametroi = 7, 
		RULE_klhsh = 8, RULE_listaOrismatwn = 9, RULE_if = 10, RULE_while = 11, 
		RULE_synthiki = 12, RULE_sygkritis = 13, RULE_ekfrasi = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"programma", "dilosi", "anathesi", "ektypwsi", "eisodos", "epistrofi", 
			"dhmiourgiasynartishs", "parametroi", "klhsh", "listaOrismatwn", "if", 
			"while", "synthiki", "sygkritis", "ekfrasi"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'PLEASE LIKE AND SUBSCRIBE'", "'EXPERTS CLAIM'", "'TO BE'", "'YOU WON'T WANT TO MISS'", 
			"'TELL ME'", "'LATEST NEWS ON'", "'SHOCKING DEVELOPMENT'", "'DISCOVER HOW TO'", 
			"'WITH'", "'RUMOR HAS IT'", "'END OF STORY'", "','", "'OF'", "'WHAT IF'", 
			"'LIES!'", "'STAY TUNED WHILE'", "'SMALLER THAN'", "'BIGGER THAN'", "'LESS THAN'", 
			"'BEATS'", "'EQUAL TO'", "'NOT EQUAL TO'", "'IS ACTUALLY'", "'*'", "'/'", 
			"'%'", "'TIMES'", "'DIVIDED BY'", "'MODULO'", "'+'", "'-'", "'PLUS'", 
			"'MINUS'", "'AND'", "'OR'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "ID", "INT", "FLOAT", "STRING", "BOOL", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tabloid.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TabloidParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgrammaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TabloidParser.EOF, 0); }
		public List<DilosiContext> dilosi() {
			return getRuleContexts(DilosiContext.class);
		}
		public DilosiContext dilosi(int i) {
			return getRuleContext(DilosiContext.class,i);
		}
		public ProgrammaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programma; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterProgramma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitProgramma(this);
		}
	}

	public final ProgrammaContext programma() throws RecognitionException {
		ProgrammaContext _localctx = new ProgrammaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programma);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 274877989366L) != 0)) {
				{
				{
				setState(30);
				dilosi();
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DilosiContext extends ParserRuleContext {
		public AnathesiContext anathesi() {
			return getRuleContext(AnathesiContext.class,0);
		}
		public EktypwsiContext ektypwsi() {
			return getRuleContext(EktypwsiContext.class,0);
		}
		public EisodosContext eisodos() {
			return getRuleContext(EisodosContext.class,0);
		}
		public EpistrofiContext epistrofi() {
			return getRuleContext(EpistrofiContext.class,0);
		}
		public DhmiourgiasynartishsContext dhmiourgiasynartishs() {
			return getRuleContext(DhmiourgiasynartishsContext.class,0);
		}
		public KlhshContext klhsh() {
			return getRuleContext(KlhshContext.class,0);
		}
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public WhileContext while_() {
			return getRuleContext(WhileContext.class,0);
		}
		public DilosiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dilosi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterDilosi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitDilosi(this);
		}
	}

	public final DilosiContext dilosi() throws RecognitionException {
		DilosiContext _localctx = new DilosiContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dilosi);
		try {
			setState(47);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				anathesi();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				ektypwsi();
				}
				break;
			case T__4:
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(40);
				eisodos();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 4);
				{
				setState(41);
				epistrofi();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 5);
				{
				setState(42);
				dhmiourgiasynartishs();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 6);
				{
				setState(43);
				klhsh();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 7);
				{
				setState(44);
				if_();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 8);
				{
				setState(45);
				while_();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 9);
				{
				setState(46);
				match(T__0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnathesiContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TabloidParser.ID, 0); }
		public EkfrasiContext ekfrasi() {
			return getRuleContext(EkfrasiContext.class,0);
		}
		public AnathesiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anathesi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterAnathesi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitAnathesi(this);
		}
	}

	public final AnathesiContext anathesi() throws RecognitionException {
		AnathesiContext _localctx = new AnathesiContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_anathesi);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(T__1);
			setState(50);
			match(ID);
			setState(51);
			match(T__2);
			setState(52);
			ekfrasi(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EktypwsiContext extends ParserRuleContext {
		public EkfrasiContext ekfrasi() {
			return getRuleContext(EkfrasiContext.class,0);
		}
		public EktypwsiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ektypwsi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterEktypwsi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitEktypwsi(this);
		}
	}

	public final EktypwsiContext ektypwsi() throws RecognitionException {
		EktypwsiContext _localctx = new EktypwsiContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ektypwsi);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(T__3);
			setState(55);
			ekfrasi(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EisodosContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TabloidParser.ID, 0); }
		public EisodosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eisodos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterEisodos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitEisodos(this);
		}
	}

	public final EisodosContext eisodos() throws RecognitionException {
		EisodosContext _localctx = new EisodosContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_eisodos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_la = _input.LA(1);
			if ( !(_la==T__4 || _la==T__5) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(58);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EpistrofiContext extends ParserRuleContext {
		public EkfrasiContext ekfrasi() {
			return getRuleContext(EkfrasiContext.class,0);
		}
		public EpistrofiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_epistrofi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterEpistrofi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitEpistrofi(this);
		}
	}

	public final EpistrofiContext epistrofi() throws RecognitionException {
		EpistrofiContext _localctx = new EpistrofiContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_epistrofi);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(T__6);
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(61);
				ekfrasi(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DhmiourgiasynartishsContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TabloidParser.ID, 0); }
		public ParametroiContext parametroi() {
			return getRuleContext(ParametroiContext.class,0);
		}
		public List<DilosiContext> dilosi() {
			return getRuleContexts(DilosiContext.class);
		}
		public DilosiContext dilosi(int i) {
			return getRuleContext(DilosiContext.class,i);
		}
		public DhmiourgiasynartishsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dhmiourgiasynartishs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterDhmiourgiasynartishs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitDhmiourgiasynartishs(this);
		}
	}

	public final DhmiourgiasynartishsContext dhmiourgiasynartishs() throws RecognitionException {
		DhmiourgiasynartishsContext _localctx = new DhmiourgiasynartishsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dhmiourgiasynartishs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(T__7);
			setState(65);
			match(ID);
			setState(66);
			match(T__8);
			setState(67);
			parametroi();
			setState(68);
			match(T__9);
			setState(70); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(69);
				dilosi();
				}
				}
				setState(72); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 274877989366L) != 0) );
			setState(74);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametroiContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(TabloidParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TabloidParser.ID, i);
		}
		public ParametroiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametroi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterParametroi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitParametroi(this);
		}
	}

	public final ParametroiContext parametroi() throws RecognitionException {
		ParametroiContext _localctx = new ParametroiContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parametroi);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(ID);
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__11) {
				{
				{
				setState(77);
				match(T__11);
				setState(78);
				match(ID);
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class KlhshContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TabloidParser.ID, 0); }
		public ListaOrismatwnContext listaOrismatwn() {
			return getRuleContext(ListaOrismatwnContext.class,0);
		}
		public KlhshContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_klhsh; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterKlhsh(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitKlhsh(this);
		}
	}

	public final KlhshContext klhsh() throws RecognitionException {
		KlhshContext _localctx = new KlhshContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_klhsh);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(ID);
			setState(85);
			match(T__12);
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(86);
				listaOrismatwn();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaOrismatwnContext extends ParserRuleContext {
		public List<EkfrasiContext> ekfrasi() {
			return getRuleContexts(EkfrasiContext.class);
		}
		public EkfrasiContext ekfrasi(int i) {
			return getRuleContext(EkfrasiContext.class,i);
		}
		public ListaOrismatwnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaOrismatwn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterListaOrismatwn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitListaOrismatwn(this);
		}
	}

	public final ListaOrismatwnContext listaOrismatwn() throws RecognitionException {
		ListaOrismatwnContext _localctx = new ListaOrismatwnContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_listaOrismatwn);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			ekfrasi(0);
			setState(94);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(90);
					match(T__11);
					setState(91);
					ekfrasi(0);
					}
					} 
				}
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfContext extends ParserRuleContext {
		public SynthikiContext synthiki() {
			return getRuleContext(SynthikiContext.class,0);
		}
		public List<DilosiContext> dilosi() {
			return getRuleContexts(DilosiContext.class);
		}
		public DilosiContext dilosi(int i) {
			return getRuleContext(DilosiContext.class,i);
		}
		public IfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitIf(this);
		}
	}

	public final IfContext if_() throws RecognitionException {
		IfContext _localctx = new IfContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_if);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__13);
			setState(98);
			synthiki();
			setState(100); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(99);
				dilosi();
				}
				}
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 274877989366L) != 0) );
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(104);
				match(T__14);
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__9) {
					{
					setState(105);
					match(T__9);
					setState(107); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(106);
						dilosi();
						}
						}
						setState(109); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 274877989366L) != 0) );
					}
				}

				}
			}

			setState(115);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileContext extends ParserRuleContext {
		public SynthikiContext synthiki() {
			return getRuleContext(SynthikiContext.class,0);
		}
		public List<DilosiContext> dilosi() {
			return getRuleContexts(DilosiContext.class);
		}
		public DilosiContext dilosi(int i) {
			return getRuleContext(DilosiContext.class,i);
		}
		public WhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitWhile(this);
		}
	}

	public final WhileContext while_() throws RecognitionException {
		WhileContext _localctx = new WhileContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_while);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(T__15);
			setState(118);
			synthiki();
			setState(119);
			match(T__9);
			setState(121); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(120);
				dilosi();
				}
				}
				setState(123); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 274877989366L) != 0) );
			setState(125);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SynthikiContext extends ParserRuleContext {
		public List<EkfrasiContext> ekfrasi() {
			return getRuleContexts(EkfrasiContext.class);
		}
		public EkfrasiContext ekfrasi(int i) {
			return getRuleContext(EkfrasiContext.class,i);
		}
		public SygkritisContext sygkritis() {
			return getRuleContext(SygkritisContext.class,0);
		}
		public SynthikiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_synthiki; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterSynthiki(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitSynthiki(this);
		}
	}

	public final SynthikiContext synthiki() throws RecognitionException {
		SynthikiContext _localctx = new SynthikiContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_synthiki);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			ekfrasi(0);
			setState(128);
			sygkritis();
			setState(129);
			ekfrasi(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SygkritisContext extends ParserRuleContext {
		public SygkritisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sygkritis; }
	 
		public SygkritisContext() { }
		public void copyFrom(SygkritisContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IsoContext extends SygkritisContext {
		public IsoContext(SygkritisContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterIso(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitIso(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SynwnymoMikroterouContext extends SygkritisContext {
		public SynwnymoMikroterouContext(SygkritisContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterSynwnymoMikroterou(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitSynwnymoMikroterou(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SynwnymoMegalyterouContext extends SygkritisContext {
		public SynwnymoMegalyterouContext(SygkritisContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterSynwnymoMegalyterou(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitSynwnymoMegalyterou(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DiaforoContext extends SygkritisContext {
		public DiaforoContext(SygkritisContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).enterDiaforo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TabloidListener ) ((TabloidListener)listener).exitDiaforo(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MegalyteroContext extends SygkritisContext {
		public MegalyteroContext(SygkritisContext ctx) { copyFrom(ctx); }
